# Agent-DNA-Transfer

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  conftest.py  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
API_REFERENCE/: index.html
BUSINESS/: index.html
COMPETITIVE_ANALYSIS/: index.html
CONSOLIDATION/: index.html
COST_OPTIMIZATION/: index.html
DASHBOARD_DESIGN/: index.html
DNA_FORMAT/: index.html
EVALUATION/: index.html
GLOSSARY/: index.html
GOVERNANCE/: index.html
MCP_INTEGRATION/: index.html
MEMORY_MODEL/: index.html
OBSERVABILITY/: index.html
PLUGINS/: index.html
PORTABLE_MEMORY_STANDARD/: index.html
PRD/: index.html
PRIVACY_COMPLIANCE/: index.html
RESEARCH/: index.html
RETRIEVAL/: index.html
SECURITY_MODEL/: index.html
SYNC/: index.html
SYSTEM_ARCHITECTURE/: index.html
TSD/: index.html
V2_PLAN/: index.html
apps/browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
apps/dashboard/: README.md  index.html  package.json  vite.config.ts
apps/dashboard/src/: App.tsx  api.ts  styles.css
docs/: API_REFERENCE.md  BUSINESS.md  COMPETITIVE_ANALYSIS.md  CONSOLIDATION.md  COST_OPTIMIZATION.md  DASHBOARD_DESIGN.md  DNA_FORMAT.md  EVALUATION.md  GLOSSARY.md  GOVERNANCE.md  MCP_INTEGRATION.md  MEMORY_MODEL.md  OBSERVABILITY.md  PLUGINS.md  PORTABLE_MEMORY_STANDARD.md  PRD.md  PRIVACY_COMPLIANCE.md  RESEARCH.md  RETRIEVAL.md  SECURITY_MODEL.md  SYNC.md  SYSTEM_ARCHITECTURE.md  TSD.md  V2_PLAN.md  index.md
editors/vscode/: README.md  package.json  tsconfig.json
editors/vscode/src/: extension.ts
examples/: README.md  eval.py  quickstart.py  team_sync.py  transfer.py
sdks/typescript/: package.json
sdks/typescript/src/: index.ts
search/: search_index.json
tests/: README.md
