# Helix — uv workspace root.
# Polyglot monorepo: Python engine/CLI/MCP/SDK here; TS dashboard & SDK under apps/ & sdks/.
# See docs/SYSTEM_ARCHITECTURE.md §8 for the full layout.

[project]
name = "helix-dna"
version = "0.1.0"
description = "Take your AI's memory anywhere — a local-first, portable, git-like memory layer for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "The Helix Authors" }]
keywords = ["ai", "memory", "mcp", "agents", "llm", "local-first", "portable", "knowledge-graph"]

# Meta-package: installing `helix-dna` pulls the user-facing pieces.
# (PyPI distribution names use the `helix-dna-*` family; the product is "Helix" and the CLI
# command is `helix`. Import packages stay `helix_core`/`helix_cli`/`helix_mcp`/`helix_sdk`.)
dependencies = [
  "helix-dna-core",
  "helix-dna-cli",
  "helix-dna-mcp",
]

[project.urls]
Homepage = "https://github.com/abhay-codes07/Agent-DNA-Transfer"
Repository = "https://github.com/abhay-codes07/Agent-DNA-Transfer"
Documentation = "https://abhay-codes07.github.io/Agent-DNA-Transfer/"

# The meta-package carries no code — it just pulls the helix-dna-* family. `bypass-selection`
# lets hatchling build a metadata-only wheel so `pip install helix-dna` works.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
helix-dna-core = { workspace = true }
helix-dna-cli = { workspace = true }
helix-dna-mcp = { workspace = true }
helix-dna-sdk = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff==0.15.17",
  "black==26.5.1",
  "mypy==2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
# Pragmatic baseline for an alpha: catch real type errors, don't require full annotations.
# Tighten toward strict incrementally (see ROADMAP).
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
addopts = "-q"
